# flathub

./: .dockerignore  .gitignore  CSV.hs  Catalog.hs  Compression.hs  Dockerfile  ES.hs  Field.hs  Global.hs  Html.hs  Ingest.hs  JSON.hs  Main.hs  Monoid.hs  Numpy.hs  PG.hs  Query.hs  README.md  START.sh  Schema.hs  Static.hs  astrosims.cabal  catalog.html  catalogs.yml  config  config-dev  docker-compose.yml  example.ipynb  flathub.cabal  h5merge.hs  insert_into_flathub.py  k8s-es.yml  k8s-ingest.yml  k8s.yml  setup.py  stack.yaml  types.ts
.github/workflows/: main.yml
ES/: Types.hs
Ingest/: CSV.hs  Delim.hs  HDF5.hs
Output/: CSV.hs  ECSV.hs  Numpy.hs
catalogs/: _dict.yml  _group.yml  _stats.yml  ananke.yml  camels.yml  camels_fof.yml  camels_sub.yml  candels.yml  eagle.yml  fire.yml  fire_streams.yml  gaea.yml  gaiadr2.yml  gaiadr3.yml  gaiadr3sso.yml  gr8.yml  illustris.yml  illustris_fof.yml  illustris_sub.yml  jhunt.yml  jhunt2021.yml  lusam.yml  quijote.yml  sam-jwst-deep.yml  sam-jwst-wide.yml  sam-ultra-wide.yml  sapfire.yml  scsam.yml  tng.yml  tng_fof.yml  tng_sub.yml  unimach.yml
dist-newstyle/cache/: config
es/gaea/: catalog.yml  import.py
es/illustris/: group-import.py  group.yml
es/neutrino/: catalog.yml  group-import.py
fi_astrosims/: client.py
flat-front/: README.md  package-lock.json  package.json  tailwind.config.js
flat-front/assets/: icon.ai
flat-front/public/: index.html  manifest.json
flat-front/src/: App.tsx  index.css  index.tsx  useAllCatalogsService.tsx  useGaiaService.tsx  useSingleCatalogService.tsx
flat-front/src/app/: utils.ts
flat-front/src/types/: Catalog.ts  Old.ts
flatfront/: .env.development  Dockerfile  README.md  astro.config.mjs  components.json  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json
flatfront-2/: package-lock.json  package.json
flatfront-astro/: .gitignore  README.md  astro.config.mjs  package.json  tailwind.config.cjs  tsconfig.json
flatfront-astro-2/: .gitignore  package.json  tsconfig.json
flatfront-astro-2/src/: global.css  highcharts.css  types.ts  utils.ts
flatfront-astro-2/src/components/: App.tsx  CatalogCell.tsx  DarkModeToggle.tsx  FieldsBrowser.tsx  FilterSection.tsx  FloatingSection.tsx  GlobalControls.tsx  HighchartsPlot.tsx  PlotHelpers.tsx  PlotSection.tsx  Plots.tsx  StatusBox.tsx  TableSection.tsx
flatfront-astro-2/src/pages/: index.astro
flatfront-astro/src/lib/: App.tsx  CatalogCell.tsx  Cells.tsx  FieldCard.tsx  FilterControls.tsx  GlobalControls.tsx  Highcharts.tsx  Katex.tsx  ObservablePlot.tsx  Plot.tsx  Primitives.tsx  Select.tsx  Table.tsx  app-state.ts  app-state.tsx  app_state.ts  columns.ts  contexts.ts  dark-mode.ts  filters.ts  filters.tsx  flathub-schema.d.ts  highcharts.css  hooks.ts  plot-hooks.ts  shared.ts  shared.tsx  stores.ts  types.ts
flatfront-astro/src/pages/: index.astro
flatfront-next/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
flatfront-next/src/app/: CatalogSelect.tsx  Nav.tsx  layout.tsx  page.tsx
flatfront-next/src/lib/: App.tsx  flathub-schema.d.ts
flatfront-svelte/: package-lock.json  package.json
flatfront-svelte/src/lib/: Nav.svelte
flatfront-svelte/src/routes/: +layout.svelte
flatfront/public/: index.html
flatfront/src/: App.tsx  Main.tsx  flathub-schema.d.ts  global.css  index.css  index.tsx  query_client.tsx  sf-css-variables.css  types.ts  utils.ts
flatfront/src/assets/: FlatHubLogo.ai
flatfront/src/components/: About.tsx  AboutThisCatalog.tsx  App.tsx  CatalogCell.tsx  Catalogs.tsx  Cells.tsx  Combobox.tsx  Comparisons.tsx  DarkModeToggle.tsx  DownloadPlotButton.tsx  DownloadPlotCSV.tsx  DownloadSection.tsx  Examples.tsx  FieldInfoDialog.tsx  FieldTitles.tsx  FieldsBrowser.tsx  FilterSection.tsx  GlobalControls.tsx  HighchartsPlot.tsx  Home.tsx  NumberInput.tsx  ObservablePlot.tsx  PlotHelpers.tsx  PlotSection.tsx  Plots.tsx  PythonSection.tsx  RandomSampleControls.tsx  StatusBox.tsx  TableSection.tsx
flatfront/src/pages/: About.tsx  Catalogs.tsx  Collections.tsx  index.astro
flatfront/src/services/: useAllCatalogsService.tsx
flatfront/src/types/: Catalog.ts  Service.ts
html/: about.html  agora.html  ananke.html  candels-cat.html  candels.html  fire.html  gaia.html  gaiadr3.html  lusam-cat.html  redoc.html  scsam-cat.html  top.html  unimach-cat.html
ingest/: ananke  camels  camels_split  sam-jwst-deep  sam-jwst-wide  sam-ultra-wide  sapfire  unimach
ingest/gaiadr3/: Makefile  gaiadr3fix.yml  gaiadr3hdf5.hs  gaiadr3meta.hs
js/: .gitignore  Makefile  datatables.net-colreorder.d.ts  datatables.net-scroller.d.ts  jspm.config.js  main.css  main.ts  mathjax.d.ts  package-lock.json  package.json  tsconfig.json
openapi/: .gitignore  Makefile
openapi/python/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
openapi/python-experimental/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
openapi/python-experimental/.openapi-generator/: FILES
openapi/python-experimental/docs/: CatalogMeta.md  Data.md  (+12 more)
pg/gaea/: import.py
py/: Astrosims Python Client Example.ipynb  README.md  example.ipynb  requirements.txt  setup.py
py/fi_astrosims/: client.py  img_gen.py
py/flathub/: client.py
src/: .gitignore  Api.hs  Attach.hs  Backend.hs  Catalog.hs  Compression.hs  ECSV.hs  ES.hs  Error.hs  Field.hs  Global.hs  Half.hs  Html.hs  Ingest.hs  JSON.hs  KeyedMap.hs  Main.hs  Monoid.hs  OpenApi.hs  Query.hs  Static.hs  Type.hs
src/Data/: ECSV.hs
src/Ingest/: CSV.hs  Delim.hs  ECSV.hs  GaiaDR3.hs  HDF5.hs  Types.hs
src/Output/: CSV.hs  ECSV.hs  FITS.hs  Numpy.hs  Types.hs
web/: .gitignore  Makefile  base.css  bundle.js.LICENSE.txt  catalog.ts  common.js  common.ts  compare.ts  datatables.min.css  datatables.net.d.ts  dev.js  forDS.html  jspm.config.js  main.css  main.ts  package-lock.json  package.json  style.css  style.css.map  tsconfig.json  types.ts  webpack.config.js
web/scss/: main.scss
web/src/: catalog.ts  common.ts  compare.ts  datatables.net.d.ts  main.ts  style.css
(+432 files in other folders)
