name:           astrosims
version:        0.1
description:    Astronomy simulation catalog repository
author:         Dylan Simon
maintainer:     dylan@dylex.net
copyright:      2018 Dylan Simon, Flatiron Institute
license:        Apache-2.0
build-type:     Simple
cabal-version:  >= 1.10

flag pgsql
  description: postgresql backend
  default: False

executable astrosims
  main-is: Main.hs
  other-modules:
    JSON
    Monoid
    Schema
    Global
    ES
    CSV
    Ingest
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall -threaded -funbox-strict-fields
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , attoparsec
    , blaze-html
    , bytestring
    , containers
    , data-default
    , filepath
    , half
    , hashable
    , hdf5
    , http-client
    , http-types
    , mime-types
    , monad-control
    , mtl
    , network-uri
    , text
    , unordered-containers
    , vector
    , wai
    , waimwork
    , warp
    , web-inv-route
    , yaml
  if flag(pgsql)
    other-modules: PG
    build-depends: postgresql-typed
    cpp-options: -DHAVE_pgsql

executable h5merge
  main-is: h5merge.hs
  other-modules:
    JSON
    Monoid
    Schema
    CSV
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall -threaded -funbox-strict-fields
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , cassava
    , data-default
    , directory
    , filepath
    , half
    , hdf5
    , resourcet
    , text
    , unordered-containers
    , vector
    , vector-algorithms
    , yaml
    , zlib
