name:           astrosims
version:        0.1
description:    Astronomy simulation catalog repository
author:         Dylan Simon
maintainer:     dylan@dylex.net
copyright:      2018 Dylan Simon, Flatiron Institute
license:        Apache-2.0
license-file:   COPYING
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type:     git
  location: git://github.com/flatironinstitute/astrosims-reproto

executable astrosims
  main-is: Main.hs
  other-modules:
    Catalog
    Compression
    ES
    Field
    Global
    Html
    Ingest
    Ingest.CSV
    Ingest.HDF5
    Ingest.Delim
    JSON
    Monoid
    Output.CSV
    Output.Numpy
    Query
    Static
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -O -Wall -threaded -funbox-strict-fields
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , attoparsec
    , blaze-html
    , bytestring
    , bzlib
    , cassava
    , containers
    , data-default
    , directory
    , filepath
    , half
    , hashable
    , hdf5
    , http-client
    , http-types
    , mime-types
    , monad-control
    , mtl
    , network-uri
    , streaming-commons
    , text
    , time
    , unordered-containers
    , vector
    , wai
    , wai-extra
    , waimwork
    , warp
    , web-inv-route
    , yaml
    , zlib
