name:           flathub
version:        0.1
description:    Flatiron simulation catalog repository
author:         Dylan Simon
maintainer:     dylan@dylex.net
copyright:      2018 Dylan Simon, Flatiron Institute
license:        Apache-2.0
license-file:   COPYING
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type:     git
  location: git://github.com/flatironinstitute/flathub

executable flathub
  main-is: Main.hs
  other-modules:
    Paths_flathub
    Api
    Attach
    Catalog
    Compression
    ES
    Field
    Global
    Html
    Ingest
    Ingest.Types
    Ingest.CSV
    Ingest.HDF5
    Ingest.Delim
    JSON
    Monoid
    OpenApi
    Output.CSV
    Output.ECSV
    Output.Numpy
    Query
    Static
    Type
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O -Wall -threaded -funbox-strict-fields
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , attoparsec
    , blaze-html
    , blaze-markup
    , bytestring
    , bzlib
    , cassava
    , conduit
    , containers
    , data-default
    , directory
    , filepath
    , half
    , hashable
    , hdf5
    , http-client
    , http-types
    , insert-ordered-containers
    , lens
    , mime-types
    , monad-control
    , mtl
    , network-uri
    , openapi3
    , scientific
    , shakespeare
    , streaming-commons
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , vector
    , wai
    , wai-extra
    , waimwork
    , warp
    , web-inv-route
    , yaml
    , zip-stream
    , zlib
